// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircleProgressBar should render 1`] = `
<DocumentFragment>
  <figure
    class="sc-AxjAm gAjwLw"
    size="10"
  >
    <svg
      viewBox="0 0 38 38"
    >
      <circle
        cx="19"
        cy="19"
        fill="transparent"
        r="15.91549430918954"
        stroke="var(--theme-color-success-200)"
        stroke-dasharray="0"
        stroke-width="2"
      />
      <circle
        cx="19"
        cy="19"
        fill="transparent"
        r="15.91549430918954"
        stroke="var(--theme-color-success-600)"
        stroke-dasharray="0 100"
        stroke-dashoffset="25"
        stroke-width="2"
      />
      <g
        class="sc-AxirZ dDMsWX"
      >
        <text
          class="sc-AxiKw itRVxm"
          data-testid="circle-progress-bar__progress"
          x="50%"
          y="50%"
        >
          0%
        </text>
      </g>
    </svg>
  </figure>
</DocumentFragment>
`;

exports[`CircleProgressBar should render the percentage color 1`] = `
<div>
  <figure
    class="sc-AxjAm gAjwLw"
    size="10"
  >
    <svg
      viewBox="0 0 38 38"
    >
      <circle
        cx="19"
        cy="19"
        fill="transparent"
        r="15.91549430918954"
        stroke="var(--theme-color-success-200)"
        stroke-dasharray="0"
        stroke-width="2"
      />
      <circle
        cx="19"
        cy="19"
        fill="transparent"
        r="15.91549430918954"
        stroke="var(--theme-color-success-600)"
        stroke-dasharray="50 50"
        stroke-dashoffset="25"
        stroke-width="2"
      />
      <g
        class="sc-AxirZ gHMuXD"
      >
        <text
          class="sc-AxiKw itRVxm"
          data-testid="circle-progress-bar__progress"
          x="50%"
          y="50%"
        >
          50
          %
        </text>
      </g>
    </svg>
  </figure>
</div>
`;

exports[`CircleProgressBar should render the percentage of progress 1`] = `
<div>
  <figure
    class="sc-AxjAm gAjwLw"
    size="10"
  >
    <svg
      viewBox="0 0 38 38"
    >
      <circle
        cx="19"
        cy="19"
        fill="transparent"
        r="15.91549430918954"
        stroke="var(--theme-color-success-200)"
        stroke-dasharray="0"
        stroke-width="2"
      />
      <circle
        cx="19"
        cy="19"
        fill="transparent"
        r="15.91549430918954"
        stroke="var(--theme-color-success-600)"
        stroke-dasharray="50 50"
        stroke-dashoffset="25"
        stroke-width="2"
      />
      <g
        class="sc-AxirZ dDMsWX"
      >
        <text
          class="sc-AxiKw itRVxm"
          data-testid="circle-progress-bar__progress"
          x="50%"
          y="50%"
        >
          50
          %
        </text>
      </g>
    </svg>
  </figure>
</div>
`;

exports[`CircleProgressBar should render the progress circle 1`] = `
<div>
  <figure
    class="sc-AxjAm gAjwLw"
    size="10"
  >
    <svg
      viewBox="0 0 38 38"
    >
      <circle
        cx="19"
        cy="19"
        fill="transparent"
        r="15.91549430918954"
        stroke="var(--theme-color-success-200)"
        stroke-dasharray="0"
        stroke-width="2"
      />
      <circle
        cx="19"
        cy="19"
        fill="transparent"
        r="15.91549430918954"
        stroke="#00f"
        stroke-dasharray="50 50"
        stroke-dashoffset="25"
        stroke-width="5"
      />
      <g
        class="sc-AxirZ dDMsWX"
      >
        <text
          class="sc-AxiKw itRVxm"
          data-testid="circle-progress-bar__progress"
          x="50%"
          y="50%"
        >
          50
          %
        </text>
      </g>
    </svg>
  </figure>
</div>
`;

exports[`CircleProgressBar should render the progress small 1`] = `
<div>
  <figure
    class="sc-AxjAm fRnMyU"
    size="5"
  >
    <svg
      viewBox="0 0 38 38"
    >
      <circle
        cx="19"
        cy="19"
        fill="transparent"
        r="15.91549430918954"
        stroke="var(--theme-color-success-200)"
        stroke-dasharray="0"
        stroke-width="2"
      />
      <circle
        cx="19"
        cy="19"
        fill="transparent"
        r="15.91549430918954"
        stroke="var(--theme-color-success-600)"
        stroke-dasharray="50 50"
        stroke-dashoffset="25"
        stroke-width="2"
      />
      <g
        class="sc-AxirZ dDMsWX"
      >
        <text
          class="sc-AxiKw itRVxm"
          data-testid="circle-progress-bar__progress"
          x="50%"
          y="50%"
        >
          50
          %
        </text>
      </g>
    </svg>
  </figure>
</div>
`;

exports[`CircleProgressBar should render the trail circle 1`] = `
<div>
  <figure
    class="sc-AxjAm gAjwLw"
    size="10"
  >
    <svg
      viewBox="0 0 38 38"
    >
      <circle
        cx="19"
        cy="19"
        fill="transparent"
        r="15.91549430918954"
        stroke="#000"
        stroke-dasharray="0"
        stroke-width="5"
      />
      <circle
        cx="19"
        cy="19"
        fill="transparent"
        r="15.91549430918954"
        stroke="var(--theme-color-success-600)"
        stroke-dasharray="50 50"
        stroke-dashoffset="25"
        stroke-width="2"
      />
      <g
        class="sc-AxirZ dDMsWX"
      >
        <text
          class="sc-AxiKw itRVxm"
          data-testid="circle-progress-bar__progress"
          x="50%"
          y="50%"
        >
          50
          %
        </text>
      </g>
    </svg>
  </figure>
</div>
`;
